--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,23 @@
 .App {
-  text-align: center;
+  padding: 20px;
+  font-size: 36px;
+  line-height: 2em;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+select {
+  font-size: 36px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App-table,
+.App-table th,
+.App-table td {
+  border: 1px solid black;
+  border-collapse: collapse;
+  font-size: 16px;
+  line-height: 180%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-table,
+.App-InputFunc {
+  margin-bottom: 32px;
 }
